# DiceForge

./: .gitignore  CMakeLists.txt  README.md
BlumBlumShub/: blumblumshub.cpp
Contributors_Only/: Contributors.txt  Instructions.md
Contributors_Only/MT/: chisquared.cpp  freq.txt  mt.cpp  mtcheck.cpp  rough.py
Contributors_Only/Source/: CMakeLists.txt  basicfxn.h  diceforge.h  distributions.h  generators.h  simpson.cpp  types.h
Contributors_Only/Source/Distributions/: distribution.h
Contributors_Only/Source/Distributions/Continuous/: Cauchy.h  Exponential.cpp  Exponential.h  Gaussian.cpp  Gaussian.h  Gibbs.cpp  Gibbs.h  Maxwell.cpp  Maxwell.h  Weibull.h
Contributors_Only/Source/Distributions/Discrete/: Bernoulli.cpp  Bernoulli.h  Binomial.cpp  Binomial.h  Gibbs.cpp  Gibbs.h  NegHypergeometric.cpp  NegHypergeometric.h  Poisson.cpp  Poisson.h  hypergeometric.cpp  hypergeometric.h
Contributors_Only/Source/Generators/: LFSR.cpp  LFSR.h  MT.cpp  MT.h  Test  Test.cpp  XORShift.cpp  XORShift.h  blumblumshub.cpp  blumblumshub.h  generator.cpp  generator.h  xorshift.h
Contributors_Only/Source/Generators/LFSR/: LinearFeedbackShiftRegister.cpp  Plot.py  output.txt
Contributors_Only/Source/Generators/naor-reingold/: a.out  naor_reingold.cpp  naor_reingold.h  naor_reingold.h.gch
Contributors_Only/Tasks/: Task_1.md  Task_2.md  Task_3.md
Contributors_Only/Testing/: rng_tester.h  test_example.cpp  test_rng.cpp
dieharder_testing/: Makefile  dieharder_test32  dieharder_test32.cpp  dieharder_test64  dieharder_test64.cpp  gen32  gen32.cpp  gen64  gen64.cpp
dieharder_testing/dieharder_results/: bbs.txt  bbs64.txt
docs/src/: main.tex
include/: diceforge.h  diceforge_core.h  diceforge_distributions.h  diceforge_generators.h
naor-reingold/: naor_reingold.cpp  naor_reingold.h
src/Core/: 2D.h  basicfxn.cpp  basicfxn.h  bigint.h  distribution.h  generator.h  types.h
src/Distributions/Continuous/Cauchy/: Cauchy.cpp  Cauchy.h
src/Distributions/Continuous/Custom/: Custom.cpp  Custom.h
src/Distributions/Continuous/Exponential/: Exponential.cpp  Exponential.h
src/Distributions/Continuous/Gaussian/: Gaussian.cpp  Gaussian.h
src/Distributions/Continuous/Maxwell/: Maxwell.cpp  Maxwell.h
src/Distributions/Continuous/Weibull/: Weibull.cpp  Weibull.h
src/Distributions/Discrete/Bernoulli/: Bernoulli.cpp  Bernoulli.h
src/Distributions/Discrete/Binomial/: Binomial.cpp  Binomial.h
src/Distributions/Discrete/Geometric/: Geometric.cpp  Geometric.h
src/Distributions/Discrete/Gibbs/: Gibbs.cpp  Gibbs.h
src/Distributions/Discrete/Hypergeometric/: Hypergeometric.cpp  Hypergeometric.h
src/Distributions/Discrete/Negative-Hypergeometric/: NegHypergeometric.cpp  NegHypergeometric.h
src/Distributions/Discrete/Poisson/: Poisson.cpp  Poisson.h
src/Generators/BBS/: blumblumshub.cpp  blumblumshub.h
src/Generators/LFSR/: LFSR.cpp  LFSR.h
src/Generators/MT/: MT.cpp  MT.h
src/Generators/Naor-Reingold/: naor_reingold.cpp  naor_reingold.h
src/Generators/XORShift/: XORShift.cpp  XORShift.h
testing/: 2Dtest.cpp  rng_tester.h  test1.out  test_2D.cpp  test_fitting.cpp  test_fitting_gaussian.cpp  test_maxwell.cpp  test_montecarlo.cpp  test_performance.cpp
testing/fitting/: test_fitting_cauchy.cpp  test_fitting_exp.cpp  test_fitting_gaussian.cpp  test_fitting_maxwell.cpp  test_fitting_weibull.cpp
